--- a/april/index.html
+++ b/april/index.html
@@ -77,14 +77,11 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Landing template for startups</h1>
-	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
+	                        <h1 class="hero-title mt-0">Welcome to StatsGen4.0</h1>
+	                        <p class="hero-paragraph">Look easy, feel easy, and really easy to understood. From #Rakyat to #Rakyat</p>
 							<div class="hero-form field field-grouped">
-								<div class="control control-expanded">
-									<input class="input" type="email" name="email" placeholder="Your best email&hellip;">
-								</div>
 								<div class="control">
-									<a class="button button-primary button-block" href="#">Early access</a>
+									<a class="button button-primary button-block" href="#">Continue</a>
 								</div>
 							</div>
 						</div>
@@ -296,8 +293,8 @@
                     <div class="features-inner section-inner">
                         <div class="features-header text-center">
                             <div class="container-sm">
-                                <h2 class="section-title mt-0">Meet April</h2>
-                                <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                                <h2 class="section-title mt-0">Meet 2020</h2>
+                                <p class="section-paragraph">Ready to understand and explore more about #Statistics and #Economics at DOSM.</p>
                             </div>
                         </div>
 						<div class="features-wrap">
@@ -311,7 +308,7 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
+                                    <h4 class="feature-title h3-mobile mb-8">Data & Stats</h4>
                                     <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
                                 </div>
                             </div>
@@ -325,7 +322,7 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
+                                    <h4 class="feature-title h3-mobile mb-8">Article</h4>
                                     <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
                                 </div>
                             </div>
@@ -340,7 +337,7 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
+                                    <h4 class="feature-title h3-mobile mb-8">Dialog</h4>
                                     <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
                                 </div>
                             </div>
@@ -354,7 +351,7 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
+                                    <h4 class="feature-title h3-mobile mb-8">NEXTGen</h4>
                                     <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
                                 </div>
                             </div>
@@ -397,7 +394,7 @@
 				</div>
 				<div class="container">
 					<div class="testimonials-inner section-inner">
-						<h2 class="section-title mt-0 text-center">Testimonials</h2>
+						<h2 class="section-title mt-0 text-center">Our Team</h2>
 						<div class="testimonials-wrap">
 							<div class="testimonial text-xs is-revealing">
 								<div class="testimonial-inner">
@@ -460,14 +457,14 @@
                     <div class="newsletter-inner section-inner">
                         <div class="newsletter-header text-center">
                             <h2 class="section-title mt-0">Stay in the know</h2>
-                            <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                            <p class="section-paragraph">Be the first to know and understood more than others.</p>
                         </div>
                         <div class="footer-form newsletter-form field field-grouped">
                             <div class="control control-expanded">
-                                <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
+                                <input class="input" type="email" name="email" placeholder="Drop your email;">
                             </div>
                             <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="#">Early access</a>
+                                <a class="button button-primary button-block button-shadow" href="#">Subscribe/RSS</a>
                             </div>
                         </div>
                     </div>
@@ -481,7 +478,7 @@
                     <div class="brand footer-brand">
                         <a href="#">
 							<svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
-								<title>April</title>
+								<title>UKK DOSM | Sharing Section</title>
 								<defs>
 									<linearGradient x1="114.674%" y1="39.507%" x2="-52.998%" y2="39.507%" id="logo-footer-a">
 										<stop stop-color="#8D92FA" offset="0%"/>
@@ -547,7 +544,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 April, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2019 April, UKK DOSM have all rights reserved for the contents</div>
                 </div>
             </div>
         </footer>
