--- a/april/index.html
+++ b/april/index.html
@@ -298,7 +298,7 @@
                 <div class="container">
                     <div class="features-inner section-inner">
                         <div class="features-header text-center">
-				<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+				<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="dist/js/script.js"></script>
                             <div class="container-sm">
                                 <h2 class="section-title mt-0">Meet 2020</h2>
                                 <p class="section-paragraph">Ready to understand and explore more about #Statistics and #Economics at DOSM.</p>
