--- a/april/index.html
+++ b/april/index.html
@@ -293,12 +293,15 @@
                     </div>
                 </div>
             </section>
-
+		<section>
+		<!-- partial:index.partial.html -->
+		<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+		</section>
             <section class="features section">
                 <div class="container">
                     <div class="features-inner section-inner">
                         <div class="features-header text-center">
-				<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="dist/js/script.js"></script>
                             <div class="container-sm">
                                 <h2 class="section-title mt-0">Meet 2020</h2>
                                 <p class="section-paragraph">Ready to understand and explore more about #Statistics and #Economics at DOSM.</p>
