--- a/april/index2.html
+++ b/april/index2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Flip clock & countdown, Vue</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="dist/style.css">
 
 </head>
 <body>
@@ -12,7 +12,7 @@
 <script>console.clear();</script>
 <!-- partial -->
   <script src='https://cdn.rawgit.com/vuejs/vue/v1.0.24/dist/vue.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js'></script><script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js'></script><script  src="dist/script.js"></script>
 
 </body>
 </html>
