--- a/april/index.html
+++ b/april/index.html
@@ -289,9 +289,14 @@
                 </div>
             </section>
 	<section class="countdown">
-                <div class="container">
+                <center><div class="container">
 			<h4 class="section-title mt-0">BANCI PENDUDUK DAN PERUMAHAN MALAYSIA 2020</h4>
-		</div>
+			<!-- partial:index.partial.html -->
+<script>console.clear();</script>
+<!-- partial -->
+  <script src='https://cdn.rawgit.com/vuejs/vue/v1.0.24/dist/vue.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js'></script><script  src="dist/script.js"></script>
+			</div></center>
 		</section>
             <section class="features section">
                 <div class="container">
