--- a/april/index.html
+++ b/april/index.html
@@ -290,17 +290,24 @@
                     </div>
                 </div>
             </section>
-	<section class="countdown">
-                <center>
-			<h4 class="section-title mt-0">BANCI PENDUDUK DAN PERUMAHAN MALAYSIA 2020</h4>
+	
+            <section class="countdown">
+                <div class="container">
+                    <div class="features-inner section-inner">
+                        <div class="features-header text-center">
+                            <div class="container-sm">
+                                <h4 class="section-title mt-0">BANCI PENDUDUK DAN PERUMAHAN MALAYSIA 2020</h4>
 			<!-- partial:index.partial.html -->
 <script>console.clear();</script>
 <!-- partial -->
   <script src='https://cdn.rawgit.com/vuejs/vue/v1.0.24/dist/vue.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js'></script><script  src="dist/script.js"></script>
-		</center>
-		</section>
-            <section class="features section">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+		<section class="features section">
                 <div class="container">
                     <div class="features-inner section-inner">
                         <div class="features-header text-center">
