--- a/april/index.html
+++ b/april/index.html
@@ -11,6 +11,13 @@
 	<script src="https://unpkg.com/animejs@2.2.0/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
+	///countdown	
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="dist/style.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
 </head>
 <body class="is-boxed has-animations">
     <div class="body-wrap boxed-container">
@@ -297,7 +304,10 @@
                             
                                 <h4 class="section-title mt-0">BANCI PENDUDUK DAN PERUMAHAN MALAYSIA 2020</h4>
 			
-                            
+                            <!-- partial:index.partial.html -->
+
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="dist/script.js"></script>
                         </div>
                     </div>
                 </div>
