--- a/april/index.html
+++ b/april/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
 	 <!-- countdown -->
-<link rel="stylesheet" href="dist/style.css">
+<link rel="stylesheet" href="dist/style2.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
@@ -304,7 +304,7 @@
                             <!-- partial:index.partial.html -->
 
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="dist/script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="dist/script2.js"></script>
                         </div>
                     </div>
                 </div>
