--- a/april/index.html
+++ b/april/index.html
@@ -298,7 +298,7 @@
                                 <h4 class="section-title mt-0">BANCI PENDUDUK DAN PERUMAHAN MALAYSIA 2020</h4>
 			
                             <!-- countdown -->
-  <iframe width="900" height="122" src="https://itsalmo.st/embed/banci-2020-mazl" scrolling="no" frameborder="0" ></iframe>
+  <iframe width="100%" src="https://itsalmo.st/embed/banci-2020-mazl" scrolling="no" frameborder="0" ></iframe>
                         </div>
                     </div>
                 </div>
