--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	                        <p class="hero-paragraph">Look easy, feel easy, and really easy to understood. From #Rakyat to #Rakyat</p>
 							<div class="hero-form field field-grouped">
 								<div class="control">
-									<a class="button button-primary button-block" href="#">Continue</a>
+									<a class="button button-primary button-block" href="https://ukkdosm.github.io/blog/">Continue to Blog</a>
 								</div>
 							</div>
 						</div>
