--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2B7R0WKYC2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155273911-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-2B7R0WKYC2');
+  gtag('config', 'UA-155273911-1');
 </script>
+
 
 </head>
 <body class="is-boxed has-animations">
