--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ Vise versa. .</p>
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2019 April, UKK DOSM.</div>
+                    <div class="footer-copyright">&copy; UKK DOSM Copyright © 2020.</div>
                 </div>
             </div>
         </footer>
