--- a/index.html
+++ b/index.html
@@ -525,12 +525,10 @@ Vise versa. .</p>
                             <p class="section-paragraph">Be the first to know and understood more than others.</p>
                         </div>
                         <div class="footer-form newsletter-form field field-grouped">
-                            <div class="control control-expanded">
-                                <input class="input" type="email" name="email" placeholder="Drop your email;">
-                            </div>
-                            <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="#">Subscribe/RSS</a>
-                            </div>
+                            <audio controls="" autoplay="">
+  <source src="../dist/images/FrontRunner.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
                         </div>
                     </div>
                 </div>
