--- a/index.html
+++ b/index.html
@@ -525,10 +525,10 @@ Vise versa. .</p>
                             <p class="section-paragraph">Be the first to know and understood more than others.</p>
                         </div>
                         <div class="footer-form newsletter-form field field-grouped">
-                            <audio controls="" autoplay="">
+                            <center><audio controls="" autoplay="autoplay">
   <source src="../dist/images/FrontRunner.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
-</audio>
+</audio></center>
                         </div>
                     </div>
                 </div>
