--- a/index.html
+++ b/index.html
@@ -524,12 +524,12 @@ Vise versa. .</p>
                             <h2 class="section-title mt-0">Stay in the know</h2>
                             <p class="section-paragraph">Be the first to know and understood more than others.</p>
                         </div>
-                        <div class="footer-form newsletter-form field field-grouped">
-                            <center><audio controls="" autoplay="autoplay">
+                        <center class="footer-form newsletter-form field field-grouped">
+                            <audio controls="" autoplay="autoplay">
   <source src="../dist/images/FrontRunner.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
-</audio></center>
-                        </div>
+</audio>
+                        </center>
                     </div>
                 </div>
             </section>
