--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ Vise versa. .</p>
 								<div class="testimonial-inner">
 									<div class="testimonial-main">
 										<div class="testimonial-header">
-											<img class="mb-16" src="dist/images/azmi-02.jpg" alt="azmi-02">
+											<img class="mb-16" src="https://ukkdosm.github.io/blog//assets/images/azmi-02.jpeg" alt="azmi-02">
 										</div>
 										<div class="testimonial-body">
 											<p class="mb-0">Mr. Azmi Ali (The Boss). </p>
