--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="_ZFlJ_IYYRz4EYs7ZjIOuVs6RcAr05AZ_wwPbMgeyf4" />
     <title>UKK DOSM | Sharing Section</title>
+	<meta name="description" content="Sharing Section, blog, ukk dosm">
+        <meta property="og:title" content="UKK DOSM" />
+        <meta property="og:url" content="https://ukkdosm.github.io/" />
+        <meta property="og:description" content="Blog UKK DOSM Sharing Section">
+        <meta property="og:image" content="../dist/images/logoUKK-small.png">
     <link rel="shortcut icon" type="image/x-icon" href="https://ukkdosm.github.io/blog/assets/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
