--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="UKK DOSM" />
         <meta property="og:url" content="https://ukkdosm.github.io/" />
         <meta property="og:description" content="Blog UKK DOSM Sharing Section">
-        <meta property="og:image" content="../dist/images/logoUKK-small.png">
+        <meta property="og:image" content="../dist/images/logoUKK-small.jpg">
     <link rel="shortcut icon" type="image/x-icon" href="https://ukkdosm.github.io/blog/assets/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
