--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ Vise versa. .</p>
                             <p class="section-paragraph">Be the first to know and understood more than others.</p>
                         </div>
                         <center class="footer-form newsletter-form field field-grouped">
-                            <audio controls="" autoplay="false">
+                            <audio controls="" autoplay="false" loop="loop">
   <source src="../dist/images/FrontRunner.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
