--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
         <meta property="og:title" content="UKK DOSM" />
         <meta property="og:url" content="https://ukkdosm.github.io/" />
         <meta property="og:description" content="Blog UKK DOSM Sharing Section">
-        <meta property="og:image" content="../dist/images/logoUKK-small.jpg">
+        <meta property="og:image" content="../dist/images/logoUKK-small.jpg" class="lazyload" >
     <link rel="shortcut icon" type="image/x-icon" href="https://ukkdosm.github.io/blog/assets/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     
 	<script src="https://unpkg.com/animejs@2.2.0/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+	<script src="lazysizes.min.js" async></script>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155273911-1"></script>
@@ -59,7 +60,7 @@
                 <div class="site-header-inner">
                     <div class="brand header-brand">
                         <h1 class="m-0">
-                            <a href="../index.html"><img src="../dist/images/logoUKK-small.png" alt="UKK DOSM" width="100" height="100">
+                            <a href="../index.html"><img src="../dist/images/logoUKK-small.png" class="lazyload"  alt="UKK DOSM" width="100" height="100">
                             </a>
                         </h1>
                     </div>
@@ -436,7 +437,7 @@ Vise versa. .</p>
 								<div class="testimonial-inner">
 									<div class="testimonial-main">
 										<div class="testimonial-header">
-											<img class="mb-16" src="dist/images/fatin-01.jpeg" alt="fatin-01">
+											<img class="mb-16" src="dist/images/fatin-01.jpeg" class="lazyload"  alt="fatin-01">
 										</div>
 										<div class="testimonial-body">
 											<p class="mb-0">Ms. Fatin Ezzati.</p>
@@ -453,7 +454,7 @@ Vise versa. .</p>
 								<div class="testimonial-inner">
 									<div class="testimonial-main">
 										<div class="testimonial-header">
-											<img class="mb-16" src="https://ukkdosm.github.io/blog//assets/images/azmi-02.jpeg" alt="azmi-02">
+											<img class="mb-16" src="https://ukkdosm.github.io/blog//assets/images/azmi-02.jpeg" class="lazyload"  alt="azmi-02">
 										</div>
 										<div class="testimonial-body">
 											<p class="mb-0">Mr. Azmi Ali (The Boss). </p>
@@ -470,7 +471,7 @@ Vise versa. .</p>
 								<div class="testimonial-inner">
 									<div class="testimonial-main">
 										<div class="testimonial-header">
-											<img class="mb-16" src="dist/images/adib-03.jpeg" alt="adib-03">
+											<img class="mb-16" src="dist/images/adib-03.jpeg" class="lazyload"  alt="adib-03">
 										</div>
 										<div class="testimonial-body">
 											<p class="mb-0">Mr. Adib Azri.</p>
@@ -487,7 +488,7 @@ Vise versa. .</p>
 								<div class="testimonial-inner">
 									<div class="testimonial-main">
 										<div class="testimonial-header">
-											<img class="mb-16" src="dist/images/aishah-04.jpeg" alt="aishah-04">
+											<img class="mb-16" src="dist/images/aishah-04.jpeg" class="lazyload"  alt="aishah-04">
 										</div>
 										<div class="testimonial-body">
 											<p class="mb-0">Ms. Aishah Rahman.</p>
@@ -504,7 +505,7 @@ Vise versa. .</p>
 								<div class="testimonial-inner">
 									<div class="testimonial-main">
 										<div class="testimonial-header">
-											<img class="mb-16" src="dist/images/najmi-05.jpg" alt="najmi-05">
+											<img class="mb-16" src="dist/images/najmi-05.jpg" class="lazyload"  alt="najmi-05">
 										</div>
 										<div class="testimonial-body">
 											<p class="mb-0">Mr. Najmi Ariffin.</p>
