--- a/countdownWSD2020.html
+++ b/countdownWSD2020.html
@@ -49,7 +49,7 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
-              <p>July 7, 2020</p></center>
+              <h3>July 7, 2020</h3></center>
 
 </div>
 
@@ -90,7 +90,7 @@ var x = setInterval(function() {
     document.getElementById("demo").innerHTML = "EXPIRED";
   }
 }, 1000);
-</script><p>October 20, 2020</p></center></div>
+</script><h3>October 20, 2020</h3></center></div>
 
    
 </body>
