--- a/hargaHutama.html
+++ b/hargaHutama.html
@@ -74,7 +74,8 @@ body, html {
 </style>
 </head>
 <body>
-<center> <h2>Harga Purata Item Terpilih</h2></center>
+<center> <h2>Harga Purata Item/Makanan Terpilih</h2></center>
+	<p>[Updated for 17/03/2020 - 22/02/2020]</p>
 <button class="tablink" onclick="openPage('Home', this, 'green')">Sayur-sayuran</button>
 <button class="tablink" onclick="openPage('News', this, 'orange')" id="defaultOpen">Buah-buahan</button>
 <button class="tablink" onclick="openPage('Contact', this, 'blue')">Makanan Laut</button>
@@ -82,25 +83,25 @@ body, html {
 
 <div id="Home" class="tabcontent">
   <h3>Sayur-sayuran</h3>
-  <p>[Updated for 17/03/2020 - 22/02/2020]</p>
+  <br>
   <iframe height="1500px" width="100%" style="border:none;" src="https://view-awesome-table.com/-M35SQCdM7jfTtRn8U_n/view?filterH=Sayur-sayuran"></iframe>
 </div>
 
 <div id="News" class="tabcontent">
   <h3>Buah-buahan</h3>
-  <p>[Updated for 17/03/2020 - 22/02/2020]</p> 
+  <br>
   <iframe height="1500px" width="100%" style="border:none;" src="https://view-awesome-table.com/-M35SQCdM7jfTtRn8U_n/view?filterH=Buah-buahan"></iframe>
 </div>
 
 <div id="Contact" class="tabcontent">
   <h3>Makanan Laut</h3>
-  <p>[Updated for 17/03/2020 - 22/02/2020]</p>
+  <br>
   <iframe height="1500px" width="100%" style="border:none;" src="https://view-awesome-table.com/-M35SQCdM7jfTtRn8U_n/view?filterH=Udang_Sotong_dan_Ketam"></iframe>
 </div>
 
 <div id="About" class="tabcontent">
   <h3>Daging</h3>
-  <p>[Updated for 17/03/2020 - 22/02/2020]</p>
+  <br>
   <iframe height="1500px" width="100%" style="border:none;" src="https://view-awesome-table.com/-M35SQCdM7jfTtRn8U_n/view?filterH=Ikan_Ayam_dan_Daging"></iframe>
 </div>
 
