--- a/hargaHutama.html
+++ b/hargaHutama.html
@@ -74,8 +74,8 @@ body, html {
 </style>
 </head>
 <body>
-<center> <h2>Harga Purata Item/Makanan Terpilih</h2></center>
-	<p>[Updated for 17/03/2020 - 22/02/2020]</p>
+<center> <h2>Harga Purata Item/Makanan Terpilih</h2>
+	<p>[Updated for 17/03/2020 - 22/02/2020]</p></center>
 	<br>
 	<style>
 .responsive {
@@ -83,11 +83,11 @@ body, html {
   height: auto;
 }
 </style>
-	<img src="https://lh3.googleusercontent.com/-U8eeNMmVep8/XnmiAhiz4_I/AAAAAAAA1vM/s_Au8NDYNSkrqa8as5yi04TNVL6WGeINgCK8BGAsYHg/s0/2020-03-23.png" alt="Nature" class="responsive" width="90%" height="1500">
+	<img src="https://lh3.googleusercontent.com/-vxvRDJWbTGU/XnmkQIttOXI/AAAAAAAA1vY/SjRq46UTd4smB-1t4Ak-ACGhEuEAS8iQACK8BGAsYHg/s0/2020-03-23.png" alt="Nature" class="responsive" width="90%" height="1500">
 	<br>
-	<iframe title="Perubahan Harga Purata Item Terpilih di Malaysia" aria-label="Arrow Plot" src="//datawrapper.dwcdn.net/QaxtI/1/" scrolling="no" frameborder="0" style="border: none;" width="712" height="1705"></iframe>
+	<center><iframe title="Perubahan Harga Purata Item Terpilih di Malaysia" aria-label="Arrow Plot" src="//datawrapper.dwcdn.net/QaxtI/1/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="1705"></iframe></center>
 	<br>
-	<iframe title="Senarai Harga Purata Item Terpilih di Malaysia" aria-label="Bars (old)" src="//datawrapper.dwcdn.net/UOire/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="349"></iframe>
+	<center><iframe title="Senarai Harga Purata Item Terpilih di Malaysia" aria-label="Bars (old)" src="//datawrapper.dwcdn.net/UOire/1/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="349"></iframe></center>
 	<br>
 <button class="tablink" onclick="openPage('Home', this, 'green')">Sayur-sayuran</button>
 <button class="tablink" onclick="openPage('News', this, 'orange')" id="defaultOpen">Buah-buahan</button>
