--- a/hargaHutama.html
+++ b/hargaHutama.html
@@ -77,7 +77,7 @@ body, html {
 <center> <h2>Harga Purata Item/Makanan Terpilih</h2>
 	<p>[Updated for 17/03/2020 - 22/03/2020]</p></center>
 	<br>
-	<center><img src="https://lh3.googleusercontent.com/-vxvRDJWbTGU/XnmkQIttOXI/AAAAAAAA1vY/SjRq46UTd4smB-1t4Ak-ACGhEuEAS8iQACK8BGAsYHg/s0/2020-03-23.png" alt="Nature" class="responsive" width="90%" height="1500"></center>
+	<center><img src="https://lh3.googleusercontent.com/-ygRn7XVnoGk/XnnSMWspYmI/AAAAAAAA1vs/RglE0CNhqkM7J6p5YkmUs8elM6l9LwxAACK8BGAsYHg/s0/2020-03-24.jpg" alt="Nature" class="responsive" width="90%" height="1500"></center>
 	<br>
 	<center><iframe title="Perubahan Harga Purata Item Terpilih di Malaysia" aria-label="Arrow Plot" src="//datawrapper.dwcdn.net/QaxtI/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="1710"></iframe></center>
 	<br>
