--- a/hargaHutama.html
+++ b/hargaHutama.html
@@ -42,9 +42,10 @@
 	<br>
 	<center><iframe title="Perubahan Harga Purata Item Terpilih di Malaysia" aria-label="Arrow Plot" src="//datawrapper.dwcdn.net/QaxtI/4/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="2500"></iframe></center>
 	<br>
-	<center><iframe title="Senarai Harga Purata Item Terpilih di Malaysia" aria-label="Bars (old)" src="//datawrapper.dwcdn.net/UOire/1/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="349"></iframe></center>
+	<center><iframe title="Perbandingan Senarai Harga Purata Item Terpilih di Malaysia" aria-label="Bars (old)" src="//datawrapper.dwcdn.net/UOire/1/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="349"></iframe></center>
 	<br>
 <center>
+	<h3>Maklumat Senarai Item/Makanan Terpilih</h3>
   <iframe height="1500px" width="95%" style="border:none;" src="https://view-awesome-table.com/-M35SQCdM7jfTtRn8U_n/view"></iframe>
 </center> 
   
