--- a/priceMCO.html
+++ b/priceMCO.html
@@ -45,7 +45,7 @@
 	<center><iframe title="Perbandingan Senarai Harga Purata Item Terpilih di Malaysia" aria-label="Bars (old)" src="//datawrapper.dwcdn.net/UOire/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="349"></iframe></center>
 	<br>
 <center>
-	<h3>Maklumat Senarai Item/Makanan Terpilih</h3>
+	<h3>Maklumat Senarai Item/Barangan Makanan Terpilih</h3>
   <iframe height="1500px" width="95%" style="border:none;" src="https://view-awesome-table.com/-M35SQCdM7jfTtRn8U_n/view"></iframe>
 </center> 
   
