--- a/priceMCO.html
+++ b/priceMCO.html
@@ -35,7 +35,7 @@
 
 </head>
 <body>
-<center> <h2>Harga Purata Item/Makanan Terpilih</h2>
+<center> <h2>Harga Purata Item/ Barangan Makanan Terpilih</h2>
 	<p>[Updated for 17/03/2020 - 22/03/2020]</p></center>
 	<br>
 	<center><img src="https://lh3.googleusercontent.com/-FrXmdw9PE1I/XnrsOzpuWYI/AAAAAAAA1yI/h0QEUPfnHksCBpCUpvRcjwq6k7Jv1hudACK8BGAsYHg/s0/2020-03-24.png" width="90%" height="1500"></center>
