--- a/maps/HC-malaysia.html
+++ b/maps/HC-malaysia.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>UKK DOSM | CoViD-19 Malaysia by States</title>
+	<title>UKK DOSM | CoViD-19 Malaysia by State</title>
 	<meta name="google-site-verification" content="_ZFlJ_IYYRz4EYs7ZjIOuVs6RcAr05AZ_wwPbMgeyf4" />  
 	<meta name="description" content="Sharing Section, blog, ukk dosm">
 	<meta property="og:title" content="UKK DOSM" />
