--- a/maps/scovidq8-2903.html
+++ b/maps/scovidq8-2903.html
@@ -83,7 +83,7 @@ Highcharts.data({
         $div = $('<div></div>')
         .dialog({
           title: this.name,
-          width: 90%,
+          width: 800,
           height: 300
         });
 
@@ -91,7 +91,7 @@ Highcharts.data({
         chart: {
           renderTo: $div[0],
           type: 'pie',
-          width: 80%,
+          width: 750,
           height: 240
         },
         title: {
