--- a/maps/scovidq8-2903.html
+++ b/maps/scovidq8-2903.html
@@ -134,7 +134,7 @@ Highcharts.data({
           text: 'Survei Khas ‘Kesan Covid-19 Kepada Ekonomi Dan Individu'
         },
         subtitle: {
-          text: 'Source: <a href="#">Jabatan Perangkaan Malaysia</a>'
+          text: '<a href="#">Kesediaan Kewangan Penduduk menghadapi Arahan Kawalan Pergerakan </a>'
         },
 
         legend: {
