--- a/maps/HC-malaysia.html
+++ b/maps/HC-malaysia.html
@@ -77,7 +77,7 @@
       },
 
       subtitle: {
-          text: 'updated on 31 Mac 2020'
+          text: 'updated on 29 April 2020'
       },
 
       mapNavigation: {
