--- a/dsh/auto-motion/calc_PLI2019.html
+++ b/dsh/auto-motion/calc_PLI2019.html
@@ -1,1 +1,196 @@
-<iframe width="1000" height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQvsCAfZ1MF6E19qdt_gehCXFf2KMnE4uVge9CDOLD7ju_iXba3PIIqiMvyTr-nRQ/pubhtml?gid=12891056&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>UKK DOSM | CoViD-19 Malaysia by State</title>
+	<meta name="google-site-verification" content="_ZFlJ_IYYRz4EYs7ZjIOuVs6RcAr05AZ_wwPbMgeyf4" />  
+	<meta name="description" content="Sharing Section, blog, ukk dosm">
+	<meta property="og:title" content="UKK DOSM" />
+	<meta property="og:url" content="https://ukkdosm.github.io/" />
+	<meta property="og:description" content="Blog UKK DOSM Sharing Section">
+	<meta property="og:image" content="../dist/images/logoUKK-small.jpg" class="lazyload" >
+		
+		<link rel="shortcut icon" type="image/x-icon" href="https://ukkdosm.github.io/blog/assets/images/favicon.ico">
+		<link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
+		<link rel="stylesheet" href="dist/css/style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js">    
+	
+	<script src="https://unpkg.com/animejs@2.2.0/anime.min.js"></script>
+	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+	<script src="lazysizes.min.js" async></script>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155273911-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-155273911-1');
+</script>
+<style>
+* {box-sizing: border-box}
+
+/* Set height of body and the document to 100% */
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial;
+}
+
+/* Style tab links */
+.tablink {
+  background-color: #555;
+  color: white;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
+}
+
+.tablink:hover {
+  background-color: #777;
+}
+
+/* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+  color: black;
+  display: none;
+  padding: 100px 20px;
+  height: 100%;
+}
+
+#Home {background-color: white;}
+#News {background-color: white;}
+#Contact {background-color: white;}
+#About {background-color: white;}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+</style>
+</head>
+<body>
+
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="https://ukkdosm.github.io/blog/" >Home</a>
+  <a data-toggle="modal" data-target="#myModal">Pasukan</a>
+  <a href="https://www.dosm.gov.my/v1/index.php">DOSM</a>
+  <div class="container">
+  <!-- Trigger the modal with a button -->
+  <button type="button" class="btn btn-lg" data-toggle="modal" data-target="#myModal">  Credits</button>
+
+</div>
+</div>
+
+<!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Credits</h4>
+        </div>
+        <div class="modal-body">
+          <h3>UKK DOSM, COVID-19 Project </h3><br>
+		  <p>	
+				<strong>Project lead:</strong> En Azizul Abllah<hr>
+				<strong>Content:</strong> Cik Noradilah Adnan<hr>
+				<strong>UX Design & Illustration:</strong> En Ahmad Najmi Ariffin<hr>
+				<strong>SOURCE:</strong><br><i> Penemuan Utama Survei Pendapatan & Perbelanjaan Isi Rumah dan Kemudahan Asas (HIES & BA) 2019</i></p>
+				
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<div id="main">
+  <span style="font-size:18px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
+</div>
+  <h2>Kalkulatar Pengiraan Pendapatan Garis Kemiskinan (PGK)</h2>
+  <iframe src="https://webclient.openasapp.net/portal#!/client/app/6438dc51-98fc-4edb-acfc-2cc97c406850?disablePageTopArea=true&disableMenu=true" width="100%" height="2000"></iframe>
+ 
+ <script>
+function openPage(pageName,elmnt,color) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablink");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].style.backgroundColor = "";
+  }
+  document.getElementById(pageName).style.display = "block";
+  elmnt.style.backgroundColor = color;
+}
+
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft= "0";
+}
+
+</script>
+   
+</body>
+</html> 
