--- a/dsh/auto-motion/calc_PLI2019.html
+++ b/dsh/auto-motion/calc_PLI2019.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>UKK DOSM | CoViD-19 Malaysia by State</title>
+	<title>CDTA@DOSM | Pengiraan Pendapatan Garis Kemiskinan (PGK)</title>
 	<meta name="google-site-verification" content="_ZFlJ_IYYRz4EYs7ZjIOuVs6RcAr05AZ_wwPbMgeyf4" />  
 	<meta name="description" content="Sharing Section, blog, ukk dosm">
 	<meta property="og:title" content="UKK DOSM" />
@@ -141,7 +141,7 @@ body, html {
           <h4 class="modal-title">Credits</h4>
         </div>
         <div class="modal-body">
-          <h3>UKK DOSM, COVID-19 Project </h3><br>
+          <h3>Projek Motion : Pengiraan Pendapatan Garis Kemiskinan (PGK) </h3><br>
 		  <p>	
 				<strong>Project lead:</strong> En Azizul Abllah<hr>
 				<strong>Content:</strong> Cik Noradilah Adnan<hr>
