--- a/dsh/auto-motion/calc_PLI2019.html
+++ b/dsh/auto-motion/calc_PLI2019.html
@@ -126,9 +126,7 @@ body, html {
   <a data-toggle="modal" data-target="#myModal">Pasukan</a>
   <a href="https://www.dosm.gov.my/v1/index.php">DOSM</a>
   <div class="container">
-  <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-lg" data-toggle="modal" data-target="#myModal">  Credits</button>
-
+  
 </div>
 </div>
 
@@ -138,7 +136,7 @@ body, html {
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Credits</h4>
+          <h4 class="modal-title">Pasukan Khas</h4>
         </div>
         <div class="modal-body">
           <h3>Projek Motion : Pengiraan Pendapatan Garis Kemiskinan (PGK) </h3><br>
@@ -158,9 +156,10 @@ body, html {
 
 <div id="main">
   <span style="font-size:18px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
-</div>
-  <h2>Kalkulatar Pengiraan Pendapatan Garis Kemiskinan (PGK)</h2>
-  <iframe src="https://webclient.openasapp.net/portal#!/client/app/6438dc51-98fc-4edb-acfc-2cc97c406850?disablePageTopArea=true&disableMenu=true" width="100%" height="2000"></iframe>
+</div><center>
+  <h2>Kalkulatar Pengiraan Pendapatan Garis Kemiskinan (PGK)</h2>  
+	  <iframe src="https://webclient.openasapp.net/portal#!/client/app/6438dc51-98fc-4edb-acfc-2cc97c406850?disablePageTopArea=true&disableMenu=true" width="80%" height="1800"></iframe>
+	</center>
  
  <script>
 function openPage(pageName,elmnt,color) {
