--- a/dsh/auto-motion/index.html
+++ b/dsh/auto-motion/index.html
@@ -101,7 +101,7 @@
 	</svg>
 	<div>
 	<button>
-    <a href="https://www.calconic.com/calculator-widgets/pendapatan-garis-kemiskinan-pgk-individu/5f0599663db636002920bffc?layouts=true" target="_blank">Pengiraan PGK</a></button><button>
+    <a href="https://ukkdosm.github.io/dsh/auto-motion/calc_PLI2019.html" target="_blank">Pengiraan PGK</a></button><button>
     <a href="https://ukkdosm.github.io/dsh/chartjs/index.html" target="_blank">Visualization</a></button><br><br>
 		<small>design by CTDA@DOSM</a></small>
 	</div>
