--- a/dsh/auto-motion/index.html
+++ b/dsh/auto-motion/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - Auto-mation animation</title>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Nunito:700'><link rel="stylesheet" href="./style.css">
+<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>CDTA@DOSM | Pengiraan Pendapatan Garis Kemiskinan (PGK)</title>
+	<meta name="google-site-verification" content="_ZFlJ_IYYRz4EYs7ZjIOuVs6RcAr05AZ_wwPbMgeyf4" />  
+	<meta name="description" content="Sharing Section, blog, ukk dosm">
+	<meta property="og:title" content="UKK DOSM" />
+	<meta property="og:url" content="https://ukkdosm.github.io/" />
+	<meta property="og:description" content="Blog UKK DOSM Sharing Section">
+	<meta property="og:image" content="../dist/images/logoUKK-small.jpg" class="lazyload" >
+		
+		<link rel="shortcut icon" type="image/x-icon" href="https://ukkdosm.github.io/blog/assets/images/favicon.ico">
+		<link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
+		<link rel="stylesheet" href="dist/css/style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Nunito:700'><link rel="stylesheet" href="./style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js">    
+	
+	<script src="https://unpkg.com/animejs@2.2.0/anime.min.js"></script>
+	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+	<script src="lazysizes.min.js" async></script>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155273911-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-155273911-1');
+</script>
 
 </head>
 <body>
