--- a/dsh/auto-motion/calc_PLI2019.html
+++ b/dsh/auto-motion/calc_PLI2019.html
@@ -122,7 +122,7 @@ body, html {
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="https://ukkdosm.github.io/blog/" >Home</a>
+  <a href="https://ukkdosm.github.io/dsh/auto-motion/" >Home</a>
   <a data-toggle="modal" data-target="#myModal">Pasukan</a>
   <a href="https://www.dosm.gov.my/v1/index.php">DOSM</a>
   <div class="container">
