--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 				            <!-- countdown -->
             <section class="countdown">
                 <div class="container">                           
-                                <p class="hero-title mt-0">BANCI PENDUDUK DAN PERUMAHAN MALAYSIA 2020</p>		
+                                <p class="hero-title mt-0">Pelaksanaan Banci Penduduk & Perumahan 2020</p>		
                             
   <h3 id="countdown"></h3><br/>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("July 8, 2020 00:00:00").getTime();
+var countDownDate = new Date("October 21, 2020 00:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
