--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				            <!-- countdown -->
             <section class="countdown">
                 <div class="container">                           
-                                <p class="hero-title mt-0">Pelaksanaan Banci Penduduk & Perumahan 2020</p>		
+                                <p class="hero-title mt-0">PELAKSANAAN BANCI PENDUDUK & PERUMAHAN 2020</p>		
                             
   <h3 id="countdown"></h3><br/>
 
